test/LitTests/Parser/Enum/UnterminatedEnumConstructorList.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:9:1: error: Expected 'NAME'; got 'END'.
// CHECK: .loci:9:1: error: Expected 'RCURLYBRACKET'; got 'END'.
enum TestEnum {

// CHECK: 2 errors generated.
